Fix projects section to have a better layout. Change background color to have more contrast.

--- a/css/resume.css
+++ b/css/resume.css
@@ -134,7 +134,9 @@ p.lead {
     display: block;
   }
 }
-
+#projects {
+  background-color: lightsteelblue;
+}
 section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
@@ -163,6 +165,9 @@ section.resume-section .resume-item .resume-date {
   section.resume-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
+  }
+  .card-img-top {
+    height: 130px;
   }
 }
 
